<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ImageView
        android:contentDescription="@string/light_blue_background"
        android:id="@+id/background"
        android:background="#4bb6ef"
        android:layout_width="match_parent"
        android:layout_height="160dp" />

    <ImageButton
        android:contentDescription="@string/close_window"
        android:id="@+id/closeDialog"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:background="@drawable/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:contentDescription="@string/selected_user_s_image"
        android:id="@+id/user_profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_icon"/>

    <TextView
        android:id="@+id/userName"
        android:layout_below="@id/user_profile_pic"
        android:text="@string/full_name"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:id="@+id/details"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        android:layout_below="@id/user_profile_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingTop="15dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/worker_id"
                    />

                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    />

                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/helmet_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="15dp"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:id="@+id/workerId"
                    android:textColor="#4bb6ef"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/workerRole"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="#4bb6ef"
                    android:layout_height="wrap_content"
                    android:text="@string/engineer"
                    />

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:contentDescription="@string/helmet_color"
                        android:id="@+id/helmetColor"
                        android:layout_centerHorizontal="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="#ac1313" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>



    </android.support.v7.widget.CardView>
    
    
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="16dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:layout_below="@id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/available"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/offline"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/not_config"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />






    </LinearLayout>

</RelativeLayout>