<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

<android.support.v7.widget.CardView
        android:id="@+id/cardView"
    android:layout_marginBottom="1dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:src="@drawable/user_icon"
            android:layout_gravity="center_vertical"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/user_image"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/workerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4bb543"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/manuel_chris_ogar"/>

            <TextView
                android:id="@+id/workerRole"
                android:layout_below="@id/workerName"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engineer"/>




        </RelativeLayout>


        <ImageView
            android:contentDescription="@string/user_availability"
            android:id="@+id/workerOnline"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/user_offline"
            android:layout_width="15dp"
            android:layout_height="15dp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>




</LinearLayout>
